@@ -1,3 +1,2 @@
 drivers/scsi/scsi_mod.o
 drivers/scsi/sd_mod.o
-drivers/scsi/sr_mod.o
