@@ -3,8 +3,12 @@ linux-kernel-di (0.13) UNRELEASED; urgency=low
   * Add the pcnet32 driver to nic-modules (used by vmware, we have space).
   * Make copy-modules abort if tar fails (lost that when converting from
     fifo).
-  * Move sr_mod to scsi-core-modules; it is required for USB cdrom drives
-    not just for scsi controllers.
+  * Move sr_mod from scsi-modules to cdrom-core-modules; it is required
+    for USB cdrom drives as well as scsi ones.
+  * cdrom-core-modules needs to depend on scsi-core-modules because of this
+    change.
+  * Removed links target in debian/rules, to make debian/rules clean binary
+    work.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Nov 2003 02:01:12 -0500
 
